# miniMips-Virtual-machine

./: .gitignore  CMakeLists.txt  README.md
assembler/assembler/: #operation_validity.rb#  obj_file.ob
assembler/assembler-python/: Assembler.py  io.404  procedures.404  test.404  testfile.404
assembler/assembler-ruby/: .#operation_validity.rb  argument_validity.rb  assembler.ru  assemblycode.txt  identify_labels.rb  op_codes.rb  registers.rb
common-lib/: common-data-types.h  common-utils.c  common-utils.h
vm/: main.c  makefile  vm  vm.c  vm.h
